two handlers added

--- a/ChatLoaderAPI/appsettings.Production.json
+++ b/ChatLoaderAPI/appsettings.Production.json
@@ -7,7 +7,7 @@
   },
 
   "PostgresOptions": {
-    "ConnectionString": "Username=postgres;Password=postgres;Host=database;Port=8080z;Database=postgres;"
+    "ConnectionString": "Username=postgres;Password=postgres;Host=database;Port=8080;Database=postgres;"
   },
 
   "DelayOptions": {
