--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,3 +20,14 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run the Docker image
       run: docker run -dp 80:80 test
+      
+  deploy:
+  
+    needs: build
+    runs-on: ubuntu-latest
+  
+    steps:
+    - uses: peaceiris/actions-gh-pages@v3
+    - name: Deploy to gh-pages
+      with:
+        publish_dir: ./build
