--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
   
     steps:
-    - uses: peaceiris/actions-gh-pages@v3
     - name: Deploy to gh-pages
+      uses: peaceiris/actions-gh-pages@v3
       with:
         publish_dir: ./build
